<resources>
    <string name="app_name">PreferenceDemo</string>
    <string name="main_category_title">标题栏</string>
    <string name="key_main_category_title">key_main_category</string>
    <string name="first_preference_button">首个Preference点击测试</string>
    <string name="key_first_preference_button">key_first_preference_button</string>
    <string name="key_list_preference">key_list_preference</string>
    <string name="list_preference_title">ListPreference测试</string>
    <string name="key_switch_preference">key_switch_preference</string>
    <string name="switch_preference_title">SwitchPreference测试</string>
    <string name="key_edit_preference">key_edit_preference</string>
    <string name="edit_preference_title">EditPreference测试</string>
    <string name="edit_preference_dialog_title">EditDialog测试</string>
    <string name="edittextdialog_title">EditTextDialog弹框Title</string>
</resources>